Changed the file index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Homework1</title>
 </head>
+
 <body>
-    
+    <header class="heading center">
+        <h1 class="heading__title">Добро пожаловать <br> на мой сайт !</h1>
+        <p class="heading__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и
+            приступай</p>
+        <button class="heading__button">Поехали!</button>
+    </header>
+    <main>
+        <section class="game">
+            <p>Игра 1</p>
+        </section>
+        <section class="game">
+            <p>Игра 2</p>
+        </section>
+        <section class="game">
+            <p>Игра 3</p>
+        </section>
+    </main>
 </body>
+
 </html>
