--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <body>
     <header class="heading center">
         <h1 class="heading__title">Добро пожаловать <br> на мой сайт !</h1>
-        <p class="heading__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и
-            приступай</p>
+        <p class="heading__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и
+           <b>приступай</b></p>
         <button class="heading__button">Поехали!</button>
     </header>
-    <main>
-        <section class="game">
-            <p>Игра 1</p>
+    <main class="game__box center">
+        <section class="game game__first">
+            <p class="game__name">Игра 1</p>
         </section>
-        <section class="game">
-            <p>Игра 2</p>
+        <section class="game game__second">
+            <p class="game__name">Игра 2</p>
         </section>
-        <section class="game">
-            <p>Игра 3</p>
+        <section class="game game__third">
+            <p class="game__name">Игра 3</p>
         </section>
     </main>
 </body>
