Js homework is done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Homework1</title>
+    <script src="./hw-2.js"></script>
+    <title>Homework2</title>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <section class="game game__first">
             <p class="game__name">Игра 1</p>
         </section>
-        <section class="game game__second">
+    <section class="game game__second">
             <p class="game__name">Игра 2</p>
         </section>
         <section class="game game__third">
