--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="./hw-4.js"></script>
+    <script src="./game-seasons.js"></script>
     <title>Homework2</title>
 </head>
 
@@ -30,6 +30,15 @@
             <p class="game__name">Игра 3</p>
         </section>
     </main>
+    <div class="playground center">
+        <div class="playground__article">
+            <h2 class="playground__heading">Времена года!</h2>
+            <p class="playground__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
+            <button class="playground__button">Играть!</button>
+           
+        </div>
+        <img src="img/vector__playground.svg" alt="">
+    </div>
 </body>
 
 </html>
