--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="./game-seasons.js"></script>
     <title>Homework2</title>
 </head>
 
@@ -34,11 +33,12 @@
         <div class="playground__article">
             <h2 class="playground__heading">Времена года!</h2>
             <p class="playground__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
-            <button class="playground__button">Играть!</button>
+            <button class="playground__button" onclick="checkSeason()">Играть!</button>
            
         </div>
         <img src="img/vector__playground.svg" alt="">
     </div>
+    <script src="./game-seasons.js"></script>
 </body>
 
 </html>
