--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="./hw-7.js"></script>
+    <script src="./hw-8.js"></script>
     <title>Homework2</title>
 </head>
 
@@ -49,8 +49,8 @@
             <button class="remember-words__button" onclick="guessTwoWords()">Играть</button>
         </div>
     </div>
-    <script src="./game-seasons.js"></script>
-    <script src="./remember-word-game.js"></script>
+    <script src="./game-seasons.js"></script> 
+   <!-- <script src="./remember-word-game.js"></script>-->
 </body>
 
 </html>
