remember word game

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <script src="./game-seasons.js"></script> 
-   <!-- <script src="./remember-word-game.js"></script>-->
+<script src="./remember-word-game.js"></script>
 </body>
 
 </html>
